k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waffle-serverless
  labels:
    app.kubernetes.io/name: waffle-serverless
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: waffle-serverless
  ports:
    - name: http
      port: 80
      targetPort: http
